--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    tools:context="org.ecaib.parkingsbcn.MainActivityFragment"
+    tools:context=".ParkingListFragment"
     tools:showIn="@layout/activity_main">
 
     <ListView
